--- a/mahasiswa-dashboard.html
+++ b/mahasiswa-dashboard.html
@@ -51,11 +51,18 @@
 
         <!-- Profile Card -->
         <div class="bg-white rounded-lg shadow-md overflow-hidden mb-6">
-            <div class="bg-gradient-to-r from-blue-500 to-cyan-500 p-6">
+            <div class="bg-gradient-to-r from-blue-500 to-cyan-500 p-6 flex items-center justify-between">
                 <h3 class="text-xl font-bold text-white flex items-center gap-2">
                     <i class="fas fa-id-card"></i>
                     Profil Saya
                 </h3>
+                <button 
+                    id="btnRefresh"
+                    class="bg-white text-blue-600 px-3 py-1 rounded text-sm font-semibold hover:bg-blue-50 transition flex items-center gap-2"
+                >
+                    <i class="fas fa-sync-alt"></i>
+                    Refresh
+                </button>
             </div>
 
             <div id="profileContent" class="p-6 text-gray-800">
@@ -70,7 +77,7 @@
     <!-- Script Firebase -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { getFirestore, collection, query, where, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyDvcW5e0tzQqLuzQ4i4vff2D0Jkc09CMd8",
@@ -87,10 +94,10 @@
 
         // === CEK LOGIN ===
         const raw = sessionStorage.getItem("user");
-        if (!raw) window.location.href = "index.html";
-
+        if (!raw) {
+            window.location.href = "index.html";
+        }
         const currentUser = JSON.parse(raw);
-
         if (currentUser.role !== "mahasiswa") {
             window.location.href = "index.html";
         }
@@ -106,44 +113,100 @@
             window.location.href = "index.html";
         });
 
-        // === LOAD PROFILE ===
-        async function loadProfile() {
+        // === LOAD PROFILE REALTIME ===
+        function loadProfile() {
             const content = document.getElementById("profileContent");
-
-            // Ambil dokumen berdasarkan ID: mahasiswa/701230196
-            const ref = doc(db, "mahasiswa", currentUser.nim);
-            const snap = await getDoc(ref);
-
-            if (!snap.exists()) {
-                content.innerHTML = `<p class="text-center text-red-500">Data mahasiswa tidak ditemukan</p>`;
-                return;
-            }
-
-            const m = snap.data();
-
             content.innerHTML = `
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="space-y-4">
-                        <p><strong>NIM:</strong> ${m.nim}</p>
-                        <p><strong>Nama:</strong> ${m.nama}</p>
-                        <p><strong>TTL:</strong> ${m.tempatLahir}, ${m.tanggalLahir}</p>
-                        <p><strong>Jenis Kelamin:</strong> ${m.jenisKelamin}</p>
-                        <p><strong>Jurusan:</strong> ${m.jurusan}</p>
-                    </div>
-                    <div class="space-y-4">
-                        <p><strong>Email:</strong> ${m.email}</p>
-                        <p><strong>No HP:</strong> ${m.noHp}</p>
-                        <p><strong>Alamat:</strong> ${m.alamat}</p>
-                        <p><strong>Tahun Keluar:</strong> ${m.tahunKeluar}</p>
-                        <p><strong>Pekerjaan:</strong> ${m.pekerjaan}</p>
-                    </div>
+                <div class="flex items-center justify-center py-8">
+                    <i class="fas fa-spinner fa-spin text-3xl text-blue-500"></i>
+                    <span class="ml-3 text-gray-600">Memuat data...</span>
                 </div>
-
-                <div class="mt-4"><strong>Judul Skripsi:</strong> ${m.judulSkripsi}</div>
-                <div class="mt-2"><strong>Penguji Skripsi:</strong> ${m.pengujiSkripsi}</div>
             `;
+
+            // Query realtime berdasarkan field nim
+            const mahasiswaQuery = query(
+                collection(db, "mahasiswa"),
+                where("nim", "==", currentUser.nim)
+            );
+
+            onSnapshot(mahasiswaQuery, (snapshot) => {
+                if (!snapshot.empty) {
+                    const m = snapshot.docs[0].data();
+                    content.innerHTML = `
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                            <div class="space-y-4">
+                                <div class="flex items-start">
+                                    <i class="fas fa-id-badge text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">NIM</p><p class="font-semibold">${m.nim}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-user text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Nama Lengkap</p><p class="font-semibold">${m.nama}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-birthday-cake text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Tempat, Tanggal Lahir</p><p class="font-semibold">${m.tempatLahir}, ${m.tanggalLahir}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-venus-mars text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Jenis Kelamin</p><p class="font-semibold capitalize">${m.jenisKelamin}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-graduation-cap text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Jurusan</p><p class="font-semibold capitalize">${m.jurusan}</p></div>
+                                </div>
+                            </div>
+                            <div class="space-y-4">
+                                <div class="flex items-start">
+                                    <i class="fas fa-envelope text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Email</p><p class="font-semibold break-all">${m.email}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-phone text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">No HP</p><p class="font-semibold">${m.noHp}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-map-marker-alt text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Alamat</p><p class="font-semibold">${m.alamat}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-calendar-alt text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Tahun Keluar</p><p class="font-semibold">${m.tahunKeluar}</p></div>
+                                </div>
+                                <div class="flex items-start">
+                                    <i class="fas fa-briefcase text-blue-500 mt-1 mr-3 w-5"></i>
+                                    <div><p class="text-sm text-gray-500">Pekerjaan</p><p class="font-semibold capitalize">${m.pekerjaan}</p></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-6 pt-6 border-t border-gray-200">
+                            <div class="flex items-start mb-4">
+                                <i class="fas fa-book text-blue-500 mt-1 mr-3 w-5"></i>
+                                <div class="flex-1">
+                                    <p class="text-sm text-gray-500">Judul Skripsi</p>
+                                    <p class="font-semibold capitalize">${m.judulSkripsi}</p>
+                                </div>
+                            </div>
+                            <div class="flex items-start">
+                                <i class="fas fa-chalkboard-teacher text-blue-500 mt-1 mr-3 w-5"></i>
+                                <div class="flex-1">
+                                    <p class="text-sm text-gray-500">Penguji Skripsi</p>
+                                    <p class="font-semibold">${m.pengujiSkripsi}</p>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                } else {
+                    content.innerHTML = `<p class="text-center text-gray-500 py-8">Data mahasiswa tidak ditemukan</p>`;
+                }
+            });
         }
 
+        document.getElementById("btnRefresh").addEventListener("click", () => {
+            loadProfile();
+        });
+
+        // Load profile saat halaman dibuka
         loadProfile();
     </script>
 
